--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.zookeeper</groupId>
 	<artifactId>zookeeper-lite</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>ZooKeeper-Lite</name>
 	<organization>
@@ -128,6 +128,11 @@
 			<artifactId>netty-all</artifactId>
 			<version>LATEST</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.typesafe</groupId>
+		    <artifactId>config</artifactId>
+		    <version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
