--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
+				<show>package</show>
 				</configuration>
 			</plugin>
             <plugin>
