--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<organization>
 		<name>University of Washington</name>
 	</organization>
-    <!--  Figure out how to make code dependent on Sun attach API optional -->
+    <!--  TODO make code dependent on Sun attach API optional -->
 	<build>
 		<plugins>
 			<plugin>
@@ -29,6 +29,18 @@
 				<show>package</show>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+			            <goals>
+			              <goal>test-jar</goal>
+			            </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
