--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 	            <executions>
                     <execution>
                         <id>copy-dependencies-scope</id>
-                        <phase>prepare-package</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -75,7 +75,7 @@
                     </execution>
 	                <execution>
 	                    <id>copy-dependencies-sources</id>
-	                    <phase>prepare-package</phase>
+	                    <phase>package</phase>
 	                    <goals>
 	                        <goal>copy-dependencies</goal>
 	                    </goals>
@@ -118,6 +118,12 @@
             <artifactId>zookeeper-lite-deps</artifactId>
             <version>3.5.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.uw.zookeeper</groupId>
+            <artifactId>zookeeper-clients</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
