--- a/zkclient/pom.xml
+++ b/zkclient/pom.xml
@@ -9,7 +9,35 @@
 	   <groupId>edu.uw.zookeeper</groupId>
 	   <artifactId>lite</artifactId>
 	   <version>0.5.0</version>
+       <relativePath>../parent</relativePath>
 	</parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 	<dependencies>
 	   <dependency>
            <groupId>${project.groupId}</groupId>
