--- a/zkclient/pom.xml
+++ b/zkclient/pom.xml
@@ -6,43 +6,48 @@
 	<packaging>jar</packaging>
 	<name>ZooKeeper-Lite Client</name>
 	<parent>
-	   <groupId>edu.uw.zookeeper</groupId>
-	   <artifactId>lite</artifactId>
-	   <version>0.5.1-SNAPSHOT</version>
-       <relativePath>../parent</relativePath>
+		<groupId>edu.uw.zookeeper</groupId>
+		<artifactId>lite</artifactId>
+		<version>0.5.1-SNAPSHOT</version>
+		<relativePath>../parent</relativePath>
 	</parent>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
-	   <dependency>
-           <groupId>${project.groupId}</groupId>
-           <artifactId>zkcore</artifactId>
-           <version>${project.version}</version>
-	   </dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zkcore</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jline</groupId>
+			<artifactId>jline</artifactId>
+			<version>2.11</version>
+		</dependency>
 	</dependencies>
 </project>
