--- a/apache/pom.xml
+++ b/apache/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 	   <groupId>edu.uw.zookeeper</groupId>
 	   <artifactId>lite</artifactId>
-	   <version>0.5.1-SNAPSHOT</version>
+	   <version>0.5.1</version>
 	   <relativePath>../parent</relativePath>
 	</parent>
 	<modules>
