--- a/apache/zkdeps/pom.xml
+++ b/apache/zkdeps/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 	   <groupId>edu.uw.zookeeper.lite</groupId>
 	   <artifactId>apache</artifactId>
-	   <version>0.5.1-SNAPSHOT</version>
+	   <version>0.5.1</version>
        <relativePath>..</relativePath>
 	</parent>
 	    <build>
