--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.uw.zookeeper</groupId>
 	<artifactId>lite</artifactId>
-	<version>0.5.1</version>
+	<version>0.5.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>ZooKeeper-Lite POM</name>
 	<url>http://lisaglendenning.github.io/zookeeper-lite</url>
