--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
        <groupId>edu.uw.zookeeper</groupId>
        <artifactId>lite</artifactId>
-       <version>0.5.1</version>
+       <version>0.5.2-SNAPSHOT</version>
        <relativePath>parent</relativePath>
     </parent>
 	<modules>
