--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -56,8 +56,23 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.0.8.Final</version>
+            <artifactId>netty-common</artifactId>
+            <version>4.0.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-buffer</artifactId>
+            <version>4.0.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport</artifactId>
+            <version>4.0.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec</artifactId>
+            <version>4.0.9.Final</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe</groupId>
