--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -21,6 +21,7 @@
                         <id>attach-sources</id>
                         <goals>
                             <goal>jar-no-fork</goal>
+                            <goal>test-jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
