--- a/all/pom.xml
+++ b/all/pom.xml
@@ -6,85 +6,95 @@
 	<packaging>pom</packaging>
 	<name>ZooKeeper-Lite All</name>
 	<parent>
-	   <groupId>edu.uw.zookeeper</groupId>
-	   <artifactId>lite</artifactId>
-	   <version>0.5.4-SNAPSHOT</version>
-	   <relativePath>../parent</relativePath>
+		<groupId>edu.uw.zookeeper</groupId>
+		<artifactId>lite</artifactId>
+		<version>0.5.4-SNAPSHOT</version>
+		<relativePath>../parent</relativePath>
 	</parent>
 	<build>
+        <resources>
+            <resource>
+                <directory>../zkcore/src/main/resources</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>../zkcore/src/test/resources</directory>
+            </testResource>
+        </testResources>
 		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies-scope</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>true</overWriteReleases>
-                            <overWriteSnapshots>true</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <useSubDirectoryPerScope>true</useSubDirectoryPerScope>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-dependencies-sources</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                        	<failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
-                            <outputDirectory>${project.build.directory}/lib/sources</outputDirectory>
-                            <overWriteReleases>true</overWriteReleases>
-                            <overWriteSnapshots>true</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <classifier>sources</classifier>
-                            <useSubDirectoryPerScope>true</useSubDirectoryPerScope>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <finalName>zklite-${project.build.finalName}</finalName>
-                    <descriptors>
-                        <descriptor>src/main/assembly/bin.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+							<useSubDirectoryPerScope>true</useSubDirectoryPerScope>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-dependencies-sources</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
+							<outputDirectory>${project.build.directory}/lib/sources</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+							<classifier>sources</classifier>
+							<useSubDirectoryPerScope>true</useSubDirectoryPerScope>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>zklite-${project.build.finalName}</finalName>
+					<descriptors>
+						<descriptor>src/main/assembly/release.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
-	   <dependency>
-           <groupId>${project.groupId}</groupId>
-           <artifactId>zkcore</artifactId>
-           <version>${project.version}</version>
-	   </dependency>
-       <dependency>
-           <groupId>${project.groupId}</groupId>
-           <artifactId>zkclient</artifactId>
-           <version>${project.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>${project.groupId}</groupId>
-           <artifactId>zkserver</artifactId>
-           <version>${project.version}</version>
-       </dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zkcore</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zkserver</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
