--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,4 +13,7 @@
        <version>1.0.0</version>
        <relativePath>zookeeper</relativePath>
     </parent>
+    <properties>
+        <maven.build.timestamp.format>yyyy-MM-dd-HH:mm</maven.build.timestamp.format>
+    </properties>
 </project>
