--- a/zkserver/pom.xml
+++ b/zkserver/pom.xml
@@ -6,44 +6,108 @@
 	<packaging>jar</packaging>
 	<name>ZooKeeper-Lite Server</name>
 	<parent>
-	   <groupId>edu.uw.zookeeper</groupId>
-	   <artifactId>lite</artifactId>
-	   <version>0.5.4-SNAPSHOT</version>
-       <relativePath>../parent</relativePath>
+		<groupId>edu.uw.zookeeper</groupId>
+		<artifactId>lite</artifactId>
+		<version>0.5.4-SNAPSHOT</version>
+		<relativePath>../parent</relativePath>
 	</parent>
+	<properties>
+		<main.class>edu.uw.zookeeper.server.Main</main.class>
+		<main.prefix>ZKSERVER_</main.prefix>
+		<main.timestamp>${maven.build.timestamp}</main.timestamp>
+	</properties>
 	<build>
+		<resources>
+			<resource>
+				<directory>../zkcore/src/main/resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>../zkcore/src/test/resources</directory>
+			</testResource>
+		</testResources>
 		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                            <goal>test-jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/bin</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../zkcore/src/main/bin</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>jar-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>test-jar-sources</id>
+						<goals>
+							<goal>test-jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-jar</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>${main.class}</mainClass>
+								</manifest>
+							</archive>
+							<excludes>
+								<exclude>log4j2.xml</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<execution>
+						<id>test-jar</id>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<exclude>log4j2.xml</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
-	   <dependency>
-           <groupId>${project.groupId}</groupId>
-           <artifactId>zkcore</artifactId>
-           <version>${project.version}</version>
-	   </dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zkcore</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
