--- a/zkclient/pom.xml
+++ b/zkclient/pom.xml
@@ -11,19 +11,61 @@
 		<version>0.5.4-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
+	<properties>
+		<main.class>edu.uw.zookeeper.client.cli.Main</main.class>
+		<main.prefix>ZKCLIENT_</main.prefix>
+		<main.timestamp>${maven.build.timestamp}</main.timestamp>
+	</properties>
 	<build>
+		<resources>
+			<resource>
+				<directory>../zkcore/src/main/resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>../zkcore/src/test/resources</directory>
+			</testResource>
+		</testResources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/bin</outputDirectory>
+							<resources>
+								<resource>
+									<directory>../zkcore/src/main/bin</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar-no-fork</goal>
+                    <execution>
+                        <id>jar-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-jar-sources</id>
+                        <goals>
                             <goal>test-jar-no-fork</goal>
-						</goals>
-					</execution>
+                        </goals>
+                    </execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -31,9 +73,31 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>default-jar</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>${main.class}</mainClass>
+								</manifest>
+							</archive>
+							<excludes>
+								<exclude>log4j2.xml</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<execution>
+						<id>test-jar</id>
 						<goals>
 							<goal>test-jar</goal>
 						</goals>
+						<configuration>
+							<excludes>
+								<exclude>log4j2.xml</exclude>
+							</excludes>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
