--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -14,8 +14,11 @@
 	<build>
 		<resources>
 			<resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+            <resource>
 				<directory>${project.basedir}/src/main/bin</directory>
-			</resource>
+            </resource>
 		</resources>
 		<plugins>
 			<plugin>
