--- a/zkserver/pom.xml
+++ b/zkserver/pom.xml
@@ -8,23 +8,24 @@
 	<parent>
 		<groupId>edu.uw.zookeeper</groupId>
 		<artifactId>lite</artifactId>
-		<version>0.5.4</version>
+		<version>0.5.5-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	<properties>
 		<main.class>edu.uw.zookeeper.server.Main</main.class>
 		<main.prefix>ZKSERVER_</main.prefix>
 		<main.timestamp>${maven.build.timestamp}</main.timestamp>
+		<zookeeper.lite.source>${project.basedir}/..</zookeeper.lite.source>
 	</properties>
 	<build>
 		<resources>
 			<resource>
-				<directory>../zkcore/src/main/resources</directory>
+				<directory>${zookeeper.lite.source}/zkcore/src/main/resources</directory>
 			</resource>
 		</resources>
 		<testResources>
 			<testResource>
-				<directory>../zkcore/src/test/resources</directory>
+				<directory>${zookeeper.lite.source}/zkcore/src/test/resources</directory>
 			</testResource>
 		</testResources>
 		<plugins>
@@ -42,7 +43,7 @@
 							<outputDirectory>${project.build.directory}/bin</outputDirectory>
 							<resources>
 								<resource>
-									<directory>../zkcore/src/main/bin</directory>
+									<directory>${zookeeper.lite.source}/zkcore/src/main/bin</directory>
 									<filtering>true</filtering>
 								</resource>
 							</resources>
