--- a/all/pom.xml
+++ b/all/pom.xml
@@ -99,5 +99,10 @@
 			<artifactId>zkserver</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>testing</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 	</dependencies>
 </project>
