--- a/zkcore/pom.xml
+++ b/zkcore/pom.xml
@@ -19,6 +19,9 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
+				<includes>
+				    <include>log4j2.xml</include>
+				</includes>
 			</resource>
 			<resource>
 				<directory>src/main/bin</directory>
@@ -61,6 +64,7 @@
 							<excludes>
 								<exclude>log4j2.xml</exclude>
 								<exclude>log4j2-test.xml</exclude>
+                                <exclude>reference.conf</exclude>
 								<exclude>main.py</exclude>
 							</excludes>
 						</configuration>
@@ -73,6 +77,8 @@
 							<excludes>
 								<exclude>log4j2.xml</exclude>
 								<exclude>log4j2-test.xml</exclude>
+                                <exclude>reference.conf</exclude>
+                                <exclude>main.py</exclude>
 							</excludes>
 						</configuration>
 					</execution>
@@ -120,6 +126,7 @@
 		<dependency>
 			<groupId>com.typesafe</groupId>
 			<artifactId>config</artifactId>
+            <!-- newer versions (1.3+) require Java 8 -->
 			<version>1.2.1</version>
 		</dependency>
 		<dependency>
